--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -13,11 +13,12 @@ jobs:
     - name: Build project and Build the Docker image
       run:
         npm run build
-        docker build . --file Dockerfile --tag try-mock-vue:$(date +%s)
+        # docker build . --file Dockerfile --tag try-mock-vue:$(date +%s)
+        docker build -t gudongn/try-mock-vue:latest
   push:
     runs-on: ubuntu-latest
     steps:
       - name: Login Docker and Push the Docker image
         run:
-          docker login -u gudongn -p zhang6681
-          docker push try-mock-vue:$(date +%s)
+          docker login -u gudongn -p 3fa7dbde-f973-4792-b74a-d3f5fe1f0f61
+          docker push try-mock-vue:$latest
