--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,7 +12,7 @@ jobs:
 #     - uses: actions/checkout@v1
     - name: Build project and Build the Docker image
       run:
-        yarn install
+        yarn
         yarn run build
         docker build -t gudongn/try-mock-vue:latest
   push:
