--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -8,9 +8,7 @@ on:
 jobs:
 
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-node@v1
@@ -20,9 +18,13 @@ jobs:
       run: |
         yarn
         yarn run build
-        docker build . --file Dockerfile --tag gudongn/try-mock-vue:latest
+        docker build . --file Dockerfile --tag try-mock-vue:v1.0.0
 
-    - name: Login Docker and Push the Docker image
+  push: 
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Login Docker and Push the Docker image
       run: |
-        docker login -u gudongn -p 3fa7dbde-f973-4792-b74a-d3f5fe1f0f61
-        docker push gudongn/try-mock-vue:latest
+        docker login -u ${{ secrets.DOCKER_ID }} -p ${{ secrets.DOCKER_KEY }}
+        docker push try-mock-vue:v1.0.0
