--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -26,5 +26,5 @@ jobs:
     steps:
       - name: Login Docker and Push the Docker image
         run: |
-          echo docker login -u ${ secrets.DOCKER_ID } -p ${ secrets.DOCKER_KEY }
+          echo docker login -u $(secrets.DOCKER_ID) -p $(secrets.DOCKER_KEY)
           docker push try-mock-vue:v1.0.0
