--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,6 +25,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Login Docker and Push the Docker image
+        env: 
+          USER: ${{ secrets.DOCKER_ID }}
+          KEY: ${{ secrets.DOCKER_KEY }}
         run: |
-          echo docker login -u $(secrets.DOCKER_ID) -p $(secrets.DOCKER_KEY)
+          echo docker login -u $USER -p $KEY
           docker push try-mock-vue:v1.0.0
